xrpl-wasm-stdlib/xrpl-macros/tests/currency/fail_wrong_length.stderr
error: Invalid currency: USDT
 --> tests/currency/fail_wrong_length.rs:5:15
  |
5 |     currency!("USDT");
  |               ^^^^^^
